fix(layout): `Card` fix title gap on mobile (#13660)

--- a/projects/addon-mobile/styles/common/card-large.less
+++ b/projects/addon-mobile/styles/common/card-large.less
@@ -13,4 +13,9 @@
     [tuiAccessories] > [tuiButtonX] {
         --t-size: 1.5rem;
     }
+
+    [tuiHeader] [tuiTitle],
+    &[tuiHeader] [tuiTitle] {
+        gap: 0.5rem;
+    }
 }
